--- a/WebContent/Homepage.html
+++ b/WebContent/Homepage.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="US-ASCII">
-<title>Insert title here!!!</title>
+<title>Homepage</title>
 </head>
 <body>
 <form action="TwilioServlet" method="post">
-	<p>User Name: <input type="text" name="phoneNumber"></p>
+	<p>Enter Phone Number: <input type="text" name="phoneNumber"></p>
 </form>
 </body>
 </html>
